实现Oracle数据库连接操作

--- a/Conf/conf.ini
+++ b/Conf/conf.ini
@@ -1,14 +1,14 @@
 [test_db]
 #数据库信息（注意不要带上引号哦，不然会报错哦！！！）
-host = 120.24.95.143
+host = 112.35.4.250
 user = zcst_cs
 password = zcst315315
 
 
 [user_info]
 #用户信息
-userName:"18565687531"
-passWord:"123456"
+userName:18565687531
+passWord:123456
 
 [url]
 #请求的接口地址（url不要带上引号哦，不然会报错哦！！！）
