首页接口完善

--- a/Conf/conf.ini
+++ b/Conf/conf.ini
@@ -12,7 +12,7 @@ passWord:123456
 
 [url]
 #请求的接口地址（url不要带上引号哦，不然会报错哦！！！）
-base_url = http://domarket.com.cn:18083/
+base_url = http://domarket.com.cn:18083
 
 [code]
 #成功状态
