新增正式环境URL

--- a/Conf/conf.ini
+++ b/Conf/conf.ini
@@ -12,8 +12,10 @@ passWord:123456
 
 [url]
 #请求的接口地址（url不要带上引号哦，不然会报错哦！！！）
+#测试环境
 base_url = http://domarket.com.cn:18083
-
+#正式环境https
+;base_url = https://www.domarket.com.cn
 [code]
 #成功状态
 success = 0
